crates/config/src/snapshots/config__theme_file__tests__every_repo_theme_parses@ristretto.snap
---
source: crates/config/src/theme_file.rs
assertion_line: 93
expression: "parse_theme(source, name).unwrap()"
---
TomlTheme {
    name: ThemeName(
        "ristretto",
    ),
    colors: TomlColors {
        background: Rgb(
            [
                18,
                18,
                18,
            ],
        ),
        muted_foreground: Rgb(
            [
                144,
                120,
                104,
            ],
        ),
        foreground: Rgb(
            [
                232,
                208,
                184,
            ],
        ),
        accent: Rgb(
            [
                224,
                112,
                64,
            ],
        ),
        green: Rgb(
            [
                154,
                170,
                104,
            ],
        ),
        yellow: Rgb(
            [
                216,
                160,
                80,
            ],
        ),
        red: Rgb(
            [
                209,
                90,
                90,
            ],
        ),
        window_background: None,
    },
    scanning_label: "scanning…",
}
