crates/config/src/snapshots/config__theme_file__tests__every_repo_theme_parses@rose-pine-dawn.snap
---
source: crates/config/src/theme_file.rs
assertion_line: 93
expression: "parse_theme(source, name).unwrap()"
---
TomlTheme {
    name: ThemeName(
        "rose-pine-dawn",
    ),
    colors: TomlColors {
        background: Rgb(
            [
                250,
                244,
                237,
            ],
        ),
        muted_foreground: Rgb(
            [
                121,
                117,
                147,
            ],
        ),
        foreground: Rgb(
            [
                87,
                82,
                121,
            ],
        ),
        accent: Rgb(
            [
                215,
                130,
                126,
            ],
        ),
        green: Rgb(
            [
                40,
                105,
                131,
            ],
        ),
        yellow: Rgb(
            [
                234,
                157,
                52,
            ],
        ),
        red: Rgb(
            [
                180,
                99,
                122,
            ],
        ),
        window_background: None,
    },
    scanning_label: "scanning…",
}
