crates/config/src/snapshots/config__theme_file__tests__every_repo_theme_parses@rose-pine.snap
---
source: crates/config/src/theme_file.rs
assertion_line: 93
expression: "parse_theme(source, name).unwrap()"
---
TomlTheme {
    name: ThemeName(
        "rose-pine",
    ),
    colors: TomlColors {
        background: Rgb(
            [
                25,
                23,
                36,
            ],
        ),
        muted_foreground: Rgb(
            [
                144,
                140,
                170,
            ],
        ),
        foreground: Rgb(
            [
                224,
                222,
                244,
            ],
        ),
        accent: Rgb(
            [
                235,
                188,
                186,
            ],
        ),
        green: Rgb(
            [
                156,
                207,
                216,
            ],
        ),
        yellow: Rgb(
            [
                246,
                193,
                119,
            ],
        ),
        red: Rgb(
            [
                235,
                111,
                146,
            ],
        ),
        window_background: None,
    },
    scanning_label: "scanning…",
}
