crates/config/src/snapshots/config__theme_file__tests__every_repo_theme_parses@terracotta-dark.snap
---
source: crates/config/src/theme_file.rs
assertion_line: 93
expression: "parse_theme(source, name).unwrap()"
---
TomlTheme {
    name: ThemeName(
        "terracotta-dark",
    ),
    colors: TomlColors {
        background: Rgb(
            [
                31,
                30,
                29,
            ],
        ),
        muted_foreground: Rgb(
            [
                184,
                181,
                173,
            ],
        ),
        foreground: Rgb(
            [
                240,
                238,
                230,
            ],
        ),
        accent: Rgb(
            [
                217,
                119,
                87,
            ],
        ),
        green: Rgb(
            [
                106,
                159,
                106,
            ],
        ),
        yellow: Rgb(
            [
                217,
                164,
                65,
            ],
        ),
        red: Rgb(
            [
                200,
                85,
                61,
            ],
        ),
        window_background: None,
    },
    scanning_label: "scanning…",
}
