crates/config/src/snapshots/config__theme_file__tests__every_repo_theme_parses@wafer.snap
---
source: crates/config/src/theme_file.rs
assertion_line: 93
expression: "parse_theme(source, name).unwrap()"
---
TomlTheme {
    name: ThemeName(
        "wafer",
    ),
    colors: TomlColors {
        background: Rgb(
            [
                242,
                242,
                242,
            ],
        ),
        muted_foreground: Rgb(
            [
                164,
                164,
                164,
            ],
        ),
        foreground: Rgb(
            [
                32,
                32,
                32,
            ],
        ),
        accent: Rgb(
            [
                74,
                144,
                217,
            ],
        ),
        green: Rgb(
            [
                74,
                144,
                217,
            ],
        ),
        yellow: Rgb(
            [
                138,
                180,
                224,
            ],
        ),
        red: Rgb(
            [
                200,
                220,
                240,
            ],
        ),
        window_background: None,
    },
    scanning_label: "scanning…",
}
