crates/config/src/snapshots/config__theme_file__tests__every_repo_theme_parses@winamp.snap
---
source: crates/config/src/theme_file.rs
assertion_line: 93
expression: "parse_theme(source, name).unwrap()"
---
TomlTheme {
    name: ThemeName(
        "winamp",
    ),
    colors: TomlColors {
        background: Rgb(
            [
                0,
                0,
                0,
            ],
        ),
        foreground: Rgb(
            [
                150,
                150,
                150,
            ],
        ),
        bright_foreground: Rgb(
            [
                255,
                255,
                255,
            ],
        ),
        accent: Rgb(
            [
                0,
                255,
                0,
            ],
        ),
        green: Rgb(
            [
                41,
                206,
                16,
            ],
        ),
        yellow: Rgb(
            [
                214,
                181,
                33,
            ],
        ),
        red: Rgb(
            [
                239,
                49,
                16,
            ],
        ),
        window_background: None,
    },
    scanning_label: "scanning…",
}
